<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="#ffffff">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/lato_black"
        android:gravity="top"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="294dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="top"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="322dp"
        android:background="#FFFFFF"
        android:elevation="15dp"
        android:fontFamily="@font/lato"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:padding="16dp" />

    <Button
        android:id="@+id/sendOtpButton"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_below="@id/phoneNumberEditText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="408dp"
        android:background="@drawable/button_green"
        android:fontFamily="@font/lato_black"
        android:text="@string/generate_otp"
        android:textColor="#ffffff"
        android:textSize="25sp" />

</RelativeLayout>
